<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/title_bg"
        android:layout_height="54dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/pijia"
            android:textColor="@color/write"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:src="@mipmap/back"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/applicant"
            android:layout_marginLeft="12dp"
            android:textColor="@color/title_bg"
            android:gravity="center"/>
        <TextView
            android:id="@+id/applicant_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="王晓晓"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/leave_time"
            android:textColor="@color/title_bg"

            android:layout_marginLeft="12dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/leave_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:text="2016-7-19"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_time"
            android:textColor="@color/title_bg"

            android:layout_marginLeft="12dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/end_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:text="2016-7-19"/>
    </LinearLayout>
    <TextView
        android:id="@+id/content_tv"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="回家办事"
        android:textColor="@color/pijia_result"
        android:background="@drawable/tv_pijia_backg"
        android:padding="6dp"/>
    <Button
        android:id="@+id/agree_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_sign_backg"
        android:textColor="@color/write"
        android:text="@string/agree"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/refuse_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_refuse_backg"
        android:textColor="@color/write"
        android:text="@string/refuse"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>