<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/write"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/class_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_class"
            android:textColor="@drawable/tv_main_tab"
            android:button="@null"
            android:checked="true"
            android:paddingTop="8dp"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_main_class"/>
        <RadioButton
            android:id="@+id/pijia_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pijia"
            android:textColor="@drawable/tv_main_tab"
            android:button="@null"
            android:paddingTop="8dp"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_main_pijia"/>
        <RadioButton
            android:id="@+id/kaoqin_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/kaoqin"
            android:textColor="@drawable/tv_main_tab"
            android:button="@null"
            android:paddingTop="8dp"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_main_kaoqin"/>
        <RadioButton
            android:id="@+id/notify_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notify"
            android:textColor="@drawable/tv_main_tab"
            android:button="@null"
            android:paddingTop="8dp"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_main_notify"/>
        <RadioButton
            android:id="@+id/userinfo_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/my"
            android:textColor="@drawable/tv_main_tab"
            android:button="@null"
            android:paddingTop="8dp"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_main_user"/>
    </RadioGroup>
    <!--
    <com.rimi.schoolteacher.widget.MyViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout">
    </com.rimi.schoolteacher.widget.MyViewPager>
    -->
    <FrameLayout
        android:id="@+id/continer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"/>
</RelativeLayout>
