<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/title_bg"
            android:layout_height="54dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/userinfo"
                android:textColor="@color/write"
                android:textSize="18sp"/>
            <ImageView
                android:id="@+id/back_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/back"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/change_header_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/write"
            android:layout_height="85dp">
            <com.rimi.schoolteacher.widget.CircleImageView
                android:id="@+id/head_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:padding="6dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/boy"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:text="@string/change_header"
                android:textColor="@color/second_text"
                android:textSize="16sp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/basic_data"
            android:gravity="center_vertical"
            android:layout_marginLeft="12sp"
            android:textColor="@color/third_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/write"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:textColor="@color/title_bg"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="王晓晓"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/write"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:textColor="@color/title_bg"
                android:text="@string/phone"/>
            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="18888888888"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/write"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:textColor="@color/title_bg"
                android:text="@string/zhiwei"/>
            <TextView
                android:id="@+id/worker_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="辅导员"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"/>
        <LinearLayout
            android:id="@+id/visible_layout"
            android:layout_width="match_parent"
            android:background="@color/write"
            android:layout_height="wrap_content"
            android:minHeight="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:textColor="@color/title_bg"
                android:text="@string/class_"/>
            <TextView
                android:id="@+id/classname_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:text="3000届60班"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:background="@color/dialog_back">
        <Button
            android:id="@+id/photo_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/write"
            android:text="@string/photo"/>
        <Button
            android:id="@+id/picture_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/photo_btn"
            android:background="@color/write"
            android:layout_marginBottom="1dp"
            android:text="@string/picture"/>
        <Button
            android:id="@+id/null_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/picture_btn"
            android:background="@color/transf"/>
    </RelativeLayout>
</FrameLayout>