<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@mipmap/password"
            android:layout_alignParentBottom="true"
            android:background="@color/transf"
            android:id="@+id/password_edt"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/input_password"
            android:drawablePadding="6dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/username_edt"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_above="@+id/password_edt"
            android:drawableLeft="@mipmap/username"
            android:background="@color/transf"
            android:layout_gravity="center_horizontal"
            android:hint="@string/input_username"
            android:drawablePadding="6dp">
            <requestFocus/>
        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textColor="@color/write"
            android:textSize="18sp"
            android:background="@drawable/btn_login_backg"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiesao"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:drawablePadding="4dp"/>
    </LinearLayout>
</LinearLayout>