<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/title_bg"
        android:layout_height="54dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/change_password"
            android:textColor="@color/write"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:src="@mipmap/back"/>
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp">
        <EditText
            android:id="@+id/oldpassword_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="72dp"
            android:password="true"
            android:background="@color/write"
            android:imeOptions="actionNext"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/old_password"
            android:gravity="center"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/newpassword_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="72dp"
            android:password="true"
            android:maxLength="18"
            android:background="@color/write"
            android:imeOptions="actionNext"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/new_password"
            android:gravity="center"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/confirm_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="86dp"
            android:password="true"
            android:maxLength="18"
            android:background="@color/write"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/confirm"
            android:gravity="center"/>
    </RelativeLayout>
    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/change_password"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_signout_backg"
        android:textSize="16sp"
        android:textColor="@color/write"
        android:layout_marginTop="50dp"/>
</LinearLayout>