<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sign_time"
            android:paddingLeft="12dp"
            android:drawableLeft="@mipmap/sign_time"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/sign_time_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/work_adds"
            android:drawableLeft="@mipmap/work_adds"
            android:drawablePadding="6dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/work_adds_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/adds"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sign_adds"
            android:drawableLeft="@mipmap/sign_adds"
            android:drawablePadding="6dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/location_adds_tv"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <com.amap.api.maps2d.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <Button
        android:id="@+id/sign_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_sign_backg"
        android:textColor="@color/write"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"/>
</LinearLayout>
